WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210040
CrashTracer: MobileSafari at WebKit: WebKit::SystemPreviewController::updateProgress
https://bugs.webkit.org/show_bug.cgi?id=210040
Summary
CrashTracer: MobileSafari at WebKit: WebKit::SystemPreviewController::updateP...
Dean Jackson
Reported
2020-04-05 16:18:41 PDT
CrashTracer: MobileSafari at WebKit: WebKit::SystemPreviewController::updateProgress
Attachments
Patch
(5.56 KB, patch)
2020-04-05 16:28 PDT
,
Dean Jackson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2020-04-05 16:19:20 PDT
rdar://51410841
Dean Jackson
Comment 2
2020-04-05 16:28:33 PDT
Created
attachment 395534
[details]
Patch
Darin Adler
Comment 3
2020-04-05 16:36:34 PDT
Comment on
attachment 395534
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=395534&action=review
> Source/WebKit/UIProcess/Cocoa/DownloadClient.mm:70 > + auto* webPage = downloadProxy.originatingPage();
Just page?
Dean Jackson
Comment 4
2020-04-06 11:00:01 PDT
Comment on
attachment 395534
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=395534&action=review
>> Source/WebKit/UIProcess/Cocoa/DownloadClient.mm:70 >> + auto* webPage = downloadProxy.originatingPage(); > > Just page?
Will fix.
Dean Jackson
Comment 5
2020-04-06 11:08:57 PDT
Committed
r259580
: <
https://trac.webkit.org/changeset/259580
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug